--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseInvoice/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseInvoice/Search.cshtml
@@ -50,7 +50,7 @@
                                 <div class="input-group">
                                     <input type="text" class="form-control invoice-filter autocomplete-text" name="Filter.Purchase_Invoice_No" id="texPurchaseInvoiceNo" placeholder="Enter Purchase Invoice No to search" value="" data-table="Purchase_Invoice" data-col="Purchase_Invoice_Id,Purchase_Invoice_No" data-headernames="Purchase Invoice">
                                     <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
-                                    <input type="hidden" id="hdnPurchaseInvoiceId" name="" class="auto-complete-label" />
+                                    <input type="hidden" id="hdnPurchaseInvoiceId" name="Filter.Purchase_Invoice_Id" class="auto-complete-label" />
                                     <input type="hidden" id="hdnPurchaseInvoiceNo" name="" class="auto-complete-value" />
                                    
 
