--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Index.cshtml
@@ -1,8 +1,11 @@
 ﻿@model MyLeoRetailer.Models.PurchaseReturnViewModel
+@using MyLeoRetailer.Common;
+@using MyLeoRetailerInfo.Common;
 
 <script src="~/Scripts/Modules/PurchaseReturn/purchasereturn_events.js"></script>
 <script src="~/Scripts/Modules/PurchaseReturn/purchasereturn_methods.js"></script>
 <script src="~/Scripts/Modules/PurchaseReturn/purchasereturn_validation.js"></script>
+<script src="~/Scripts/Modules/common_methods.js"></script>
 
 <style>
     .input-group-addon {
@@ -118,7 +121,7 @@
                             <div class="block">
                                 <h4 style="margin-top: 0px;">Purchase Invoice details.</h4>
 
-                                <input type="hidden" class="form-control input-sm" id="hdf_Purchase_Invoice_Id">
+                                <input type="hidden" class="form-control input-sm" id="hdf_Purchase_Invoice_Id" value="x">
 
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Purchase Invoice No.</span>
@@ -217,7 +220,7 @@
                                             <input type="hidden" name="PurchaseReturn.PurchaseReturns[0].Size_Id" id="hdnSize_Id_0" />
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="PurchaseReturn.PurchaseReturns[0].Quantity" id="textQuantity_0" value="1" onblur="javascript: CalculateTotal();" maxlength="10" />
+                                            <input class="form-control input-sm" type="text" name="PurchaseReturn.PurchaseReturns[0].Quantity" id="textQuantity_0" value="1" onchange="Add_Validation(0);" onblur="javascript: CalculateTotal();" maxlength="10" />
                                             @*<input class="form-control input-sm" type="hidden" name="" id="hdnQuantity_0" value="" />*@ 
                                         </td>
                                         <td>
