Employee Search Functionality,Gift Voucher No Validation

--- a/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Index.cshtml
@@ -45,8 +45,10 @@
 
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Voucher no</span>
-                            <input type="text" class="form-control" placeholder="Enter Gift Voucher No." name="GiftVoucher.Gift_Voucher_No" value="@Model.GiftVoucher.Gift_Voucher_No" maxlength="20" />
+                            <input type="text" class="form-control" placeholder="Enter Gift Voucher No." id="txtGiftVoucherNo" name="GiftVoucher.Gift_Voucher_No" value="@Model.GiftVoucher.Gift_Voucher_No" maxlength="20" />
                             <input type="hidden" class="form-control" id="hdn_GiftVoucherId" name="GiftVoucher.Gift_Voucher_Id" value="@Model.GiftVoucher.Gift_Voucher_Id" />
+                            <input type="hidden" class="form-control" id="hdn_GiftVoucherNo" name="" value="@Model.GiftVoucher.Gift_Voucher_No" />
+
                         </div>
 
                         <div class="form-group">
