--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/Search.cshtml
@@ -10,7 +10,7 @@
 
 <script src="~/Scripts/Modules/Employee/search_employee_event.js"></script>
 <script src="~/Scripts/Modules/Employee/search_employee_method.js"></script>
-<script src="~/Scripts/Modules/Employee/employee_events.js"></script>
+@*<script src="~/Scripts/Modules/Employee/employee_events.js"></script>*@
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
     <li><a href="#">Home</a></li>
