--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Search.cshtml
@@ -94,8 +94,8 @@
                         <div class="col-md-8" style="text-align: right; padding-top: 25px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
 
                             <div class="btn-group">
-                                <button role="button" class="btn btn-success active" value="Create" id="btnCreatePurchaseOrderRequest">Create</button>
-                                <button role="button" class="btn btn-danger active" disabled value="Edit" id="btnEditPurchaseOrderRequest">View</button>
+                                <button type="button" class="btn btn-success active" value="Create" id="btnCreatePurchaseOrderRequest">Create</button>
+                                <button type="button" class="btn btn-danger active" disabled value="Edit" id="btnEditPurchaseOrderRequest">View</button>
                             </div>
 
                         </div>
