--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Search.cshtml
@@ -80,7 +80,7 @@
                                 <div class="form-group auto-complete">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Vendor Name</span>
                                     <div class="input-group">
-                                        <input type="text" class="form-control invoice-filter autocomplete-text" id="hdnVendor_Id" placeholder="Enter Vendor name to search" value="" data-table="Purchase_order_request" data-col="Vendor_Id,Vendor_Name" data-param="hdnBranchIDs" data-field="Branch_Id" data-headernames="Vendor name">
+                                        <input type="text" class="form-control invoice-filter autocomplete-text" id="hdnVendor_Id" placeholder="Enter Vendor name to search" value="" data-table="Purchase_Order_Request" data-col="Vendor_Id,Vendor_Name" data-param="hdnBranchIDs" data-field="Branch_Id" data-headernames="Vendor name">
                                         <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
                                         <input type="hidden"  class="auto-complete-label" />
                                         <input type="hidden" id="drpVendor_Id" name="Filter.Vendor_Id" class="auto-complete-value" />
