work on Lookup and Edit button on Sales invoice and Sales return

--- a/MyLeoRetailer/Views/PostLogin/Master/Payable/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Payable/Index.cshtml
@@ -68,8 +68,12 @@
                                         <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
                                         <input type="hidden" id="hdnVendorName" name="Payable.Vendor_Name" class="auto-complete-value" />
                                         <input type="hidden" id="hdnVendorId" name="Payable.Vendor_Id" class="auto-complete-label" />
+                                        @*<input type="hidden" id="hdnVendorId" name="Payable.Vendor_Id" />
+                                        <input type="hidden" id="hdnVendorName" name="Payable.Vendor_Name" class="auto-complete-value" />*@
+                                        
 
                                     </div>
+                                 
                                 </div>
                             </div>
 
