--- a/MyLeoRetailer/Views/PostLogin/SalesOrder/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesOrder/Search.cshtml
@@ -62,7 +62,9 @@
                                     <div class="input-group">
                                         <input type="text" class="form-control invoice-filter autocomplete-text" name="Filter.Sales_Invoice_No" id="txtSalesInvoiceNo" placeholder="Enter Sales Invoice no to search" value="" data-table="Sales_Invoice" data-col="Branch_ID,Sales_Invoice_No" data-param="hdnBranchIDs" data-field="Branch_Id" data-headernames="Sales Invoice No">
                                         <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
-                                        <input type="hidden" id="hdnSalesInvoiceID" name="Filter.Sales_Invoice_Id" class="auto-complete-label" />
+                                        @*<input type="hidden" id="hdnSalesInvoiceID" name="Filter.Sales_Invoice_Id" class="auto-complete-label" />
+                                        <input type="hidden" id="hdnSalesInvoiceNo" name="Filter.Sales_Invoice_No" class="auto-complete-value" />*@
+                                        <input type="hidden" id="hdnSalesInvoiceID" name="Filter.Sales_Invoice_Id" />
                                         <input type="hidden" id="hdnSalesInvoiceNo" name="Filter.Sales_Invoice_No" class="auto-complete-value" />
 
                                     </div>
