--- a/MyLeoRetailer/Views/PostLogin/SalesReturn/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesReturn/Search.cshtml
@@ -76,7 +76,9 @@
                                     <div class="input-group">
                                         <input type="text" class="form-control invoice-filter autocomplete-text" name="Filter.Sales_Return_No" id="txtSalesReturnNo" placeholder="Enter Sales Return no to search" value="" data-table="Sales_Return" data-col="Branch_ID,Sales_Return_No" data-param="hdnBranchIDs" data-field="Branch_Id" data-headernames="Sales Return No">
                                         <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
-                                        <input type="hidden" id="hdnSalesReturnID" name="Filter.Sales_Return_Id" class="auto-complete-label" />
+                                        @*<input type="hidden" id="hdnSalesReturnID" name="Filter.Sales_Return_Id" class="auto-complete-label" />
+                                        <input type="hidden" id="hdnSalesReturnNo" name="Filter.Sales_Return_No" class="auto-complete-value" />*@
+                                        <input type="hidden" id="hdnSalesReturnID" name="Filter.Sales_Return_Id" />
                                         <input type="hidden" id="hdnSalesReturnNo" name="Filter.Sales_Return_No" class="auto-complete-value" />
 
                                     </div>
