--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseInvoice/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseInvoice/Index.cshtml
@@ -310,10 +310,10 @@
                                         <td>
                                             <div class="form-group auto-complete">
                                                 <div class="input-group">
-                                                    <input type="text" class="form-control invoice-filter autocomplete-text" id="textSKU_No_0" onblur="javascript: Get_Purchase_Invoice_Items_By_SKU_Code(0);" placeholder="Enter SKU to search" value="" data-table="Product_SKU_Mapping" data-col="Quantity,SKU_Code" data-headernames="SKU Code" data-param="hdnPurchase_Order_Id_0" data-field="Purchase_Order_Id" />
+                                                    <input type="text" class="form-control invoice-filter autocomplete-text" id="textSKU_No_0" placeholder="Enter SKU to search" value="" data-table="Product_SKU_Mapping" data-col="Quantity,SKU_Code" data-headernames="SKU Code" data-param="hdnPurchase_Order_Id_0" data-field="Purchase_Order_Id" />
                                                     <span class="input-group-addon"><a href="#" class="text-muted div_SKU" id="hrefDealer" role="button"><i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
                                                     <input type="hidden" id="hdnQuantity_0" value="" class="auto-complete-value" />
-                                                    <input type="hidden" id="hdnSKU_No_0" value="" name="PurchaseInvoice.PurchaseInvoices[0].SKU_Code" class="auto-complete-label" />
+                                                    <input type="hidden" id="hdnSKU_No_0" value="" name="PurchaseInvoice.PurchaseInvoices[0].SKU_Code" class="auto-complete-label" onchange="javascript: Get_Purchase_Invoice_Items_By_SKU_Code(0);" />
                                                 </div>
                                             </div>
                                         </td>
@@ -345,7 +345,7 @@
                                             <input type="hidden" name="PurchaseInvoice.PurchaseInvoices[0].Size_Id" id="hdnSize_Id_0" />
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="PurchaseInvoice.PurchaseInvoices[0].Quantity" id="textQuantity_0" value="1" onchange="Add_Validation(0);" onblur="    javascript: CalculateTotal();" maxlength="10"/>
+                                            <input class="form-control input-sm validate" type="text" name="PurchaseInvoice.PurchaseInvoices[0].Quantity" id="textQuantity_0" value="1" onchange="Add_Validation(0);" onblur="    javascript: CalculateTotal();" maxlength="10" />
                                         </td>
                                         <td>
                                             <input class="form-control input-sm" type="text" name="PurchaseInvoice.PurchaseInvoices[0].WSR_Price" value="0" id="textWSR_Price_0" readonly />
