--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Index.cshtml
@@ -184,10 +184,10 @@
                                         <td>                                            
                                             <div class="form-group auto-complete">
                                                 <div class="input-group">
-                                                    <input type="text" class="form-control invoice-filter autocomplete-text" id="textSKU_No_0" onblur="javascript: Get_Purchase_Return_Items_By_SKU_Code(0);" placeholder="Enter SKU to search" value="" data-table="Purchase_Invoice_Item" data-col="Quantity,SKU_Code" data-headernames="SKU Code" data-param="hdf_Purchase_Invoice_Id" data-field="Purchase_Invoice_Id" />
+                                                    <input type="text" class="form-control invoice-filter autocomplete-text" id="textSKU_No_0" placeholder="Enter SKU to search" value="" data-table="Purchase_Invoice_Item" data-col="Quantity,SKU_Code" data-headernames="SKU Code" data-param="hdf_Purchase_Invoice_Id" data-field="Purchase_Invoice_Id" />
                                                     <span class="input-group-addon"><a href="#" class="text-muted" id="hrefDealer" role="button"><i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
                                                     <input type="hidden" id="hdnQuantity_0" value="" class="auto-complete-value" />
-                                                    <input type="hidden" id="hdnSKU_No_0" value="" name="PurchaseReturn.PurchaseReturns[0].SKU_Code" class="auto-complete-label" />
+                                                    <input type="hidden" id="hdnSKU_No_0" value="" name="PurchaseReturn.PurchaseReturns[0].SKU_Code" class="auto-complete-label" onchange="javascript: Get_Purchase_Return_Items_By_SKU_Code(0);" />
                                                 </div>
                                             </div>
                                             <input type="hidden" id="hdnPurchase_Order_Id_0" value="" name="PurchaseReturn.PurchaseReturns[0].Purchase_Order_Id" />
@@ -220,7 +220,7 @@
                                             <input type="hidden" name="PurchaseReturn.PurchaseReturns[0].Size_Id" id="hdnSize_Id_0" />
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="PurchaseReturn.PurchaseReturns[0].Quantity" id="textQuantity_0" value="1" onchange="Add_Validation(0);" onblur="javascript: CalculateTotal();" maxlength="10" />
+                                            <input class="form-control input-sm" type="text" name="PurchaseReturn.PurchaseReturns[0].Quantity" id="textQuantity_0" value="1" onblur="Add_Validation(0); CalculateTotal()" maxlength="10" />
                                             @*<input class="form-control input-sm" type="hidden" name="" id="hdnQuantity_0" value="" />*@ 
                                         </td>
                                         <td>
