--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Search.cshtml
@@ -52,7 +52,7 @@
                             <div class="form-group auto-complete">
                                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Debit Note No.</span>
                                 <div class="input-group">
-                                    <input type="text" class="form-control invoice-filter autocomplete-text" name="" id="txtDebit_Note_No" placeholder="Enter Debit note no to search" value="" data-table="Purchase_Return" data-col=" Purchase_Return_Id,Debit_Note_No" data-headernames="Purchase Return">
+                                    <input type="text" class="form-control invoice-filter autocomplete-text" id="txtDebit_Note_No" placeholder="Enter Debit note no to search" value="" data-table="Purchase_Return" data-col=" Purchase_Return_Id,Debit_Note_No" data-headernames="Purchase Return">
                                     <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
                                     <input type="hidden" id="hdnPurchaseReturnId" name="Filter.Purchase_Return_Id" class="auto-complete-value" />
                                     <input type="hidden" id="hdnDebitNoteNo" name="Filter.Debit_Note_No" class="auto-complete-label" onchange="Get_Purchase_Returns();" />
