--- a/MyLeoRetailer/Views/Shared/_Menu.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Menu.cshtml
@@ -99,7 +99,7 @@
                 <div class="row">
                     <div class="panel-heading">
                         <div class="btn-group">
-                            <button type="button" class="btn btn-success active" id="btnSaveBranch">Save</button>
+                            <button type="button" class="btn btn-success active" id="btnSaveBranch_Comm">Save</button> @*btnSaveBranch  change by vinod mane on 26/10/2016*@
                         </div>
                     </div>
 
