label width set in invoice view. print part

--- a/MyLeoRetailer/Views/PostLogin/SalesOrder/Invoice.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesOrder/Invoice.cshtml
@@ -109,8 +109,8 @@ img{
                                 <div class="row">
 
                                     <div class="col-md-6 invoice-col">
-                                        <div class="form-group">
-                                            <label for="txtStore_Address1" style="color: #333" class="">Store Address : @Model.SalesInvoice.Branch_Address, @Model.SalesInvoice.Branch_Pincode,@Model.SalesInvoice.Branch_City,@Model.SalesInvoice.Branch_State,@Model.SalesInvoice.Branch_Country</label>
+                                        <div class="form-group" >
+                                            <label for="txtStore_Address1" style="color: #333; word-wrap: break-word; width: 300px" class="">Store Address : @Model.SalesInvoice.Branch_Address, @Model.SalesInvoice.Branch_Pincode,@Model.SalesInvoice.Branch_City,@Model.SalesInvoice.Branch_State,@Model.SalesInvoice.Branch_Country</label>
                                         </div>
                                     </div><!-- /.col -->
 
