Changes in Purchase Return(method, Index), Purchase Return Request(method, Index), Purchase Invoice(method, Index), Payable(Index, Pay Cshtml), Receivable(Index, Pay Cshtml)

--- a/MyLeoRetailer/Views/PostLogin/Master/Payable/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Payable/Index.cshtml
@@ -77,7 +77,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-2">
+                            <div class="col-md-3">
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Payable status</span>
                                     <select class="form-control" id="drpPayble_Status" name="Payable.Payament_Status">
@@ -121,9 +121,9 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-2">
+                            <div class="col-md-2" style="text-align: right; margin-top: 25px;">
 
-                                <div class="btn-group" style="margin-top: 30px;">
+                                <div class="btn-group">
                                     <button type="button" id="btnSearchPayable" class="btn btn-success active">Search</button>
                                     <button type="reset" id="btnResetPayable" class="btn btn-danger active">Reset</button>
                                     <button type="button" id="btnPay" class="btn btn-primary active">Pay</button>
