--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Index.cshtml
@@ -179,7 +179,7 @@
                                             <input type="hidden" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].Size_Id" id="hdnSize_Id_0" />
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].Quantity" id="textQuantity_0" value="1" onchange="Add_Validation(0);" onblur="javascript: CalculateTotal();" maxlength="10" />
+                                            <input class="form-control input-sm validate" type="text" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].Quantity" id="textQuantity_0" value="1" onblur="Add_Validation(0); CalculateTotal()" maxlength="10" />
                                             @*<input class="form-control input-sm" type="hidden" name="" id="hdnQuantity_0" value="" />*@ 
                                         </td>
                                         <td>
