--- a/MyLeoRetailer/Views/PostLogin/Master/Receivable/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Receivable/Index.cshtml
@@ -149,13 +149,13 @@
                                     </div>
                                 </div>
 
-                                <div class="col-md-2">
-                                    <div class="btn-group" style="margin-top: 25px;">
-                                       
+                                <div class="col-md-2" style="text-align: right; margin-top: 25px;">
+                                    <div class="btn-group">
+
                                         <button type="button" id="btnSearchReceivable" class="btn btn-success active">Search</button>
                                         <button type="reset" id="btnResetReceivable" class="btn btn-danger active">Reset</button>
-                                        <button type="button" id="btnPay" class="btn btn-primary active" style="display:none">Pay</button>
-                                        
+                                        <button type="button" id="btnPay" class="btn btn-primary active">Pay</button>
+
                                     </div>
                                 </div>
 
