--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/Index.cshtml
@@ -92,11 +92,11 @@
                            <label class="switch">
                                @if (Model.Employee.IsActive == true)
                                {
-                                <input value="True" name="Employee.IsActive" checked="checked" type="checkbox" id="Flag">
+                                <input value="true" name="Employee.IsActive" checked="checked" type="checkbox" id="Flag">
                                }
                                else
                                {
-                                <input value="False" name="Employee.IsActive"  type="checkbox" id="Flag">
+                                <input value="false" name="Employee.IsActive"  type="checkbox" id="Flag">
                                }
                                @*<input checked="" id="Flag" value="0" type="checkbox">*@
                                <span></span>
