--- a/MyLeoRetailer/Views/PostLogin/Master/Payable/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Payable/Index.cshtml
@@ -125,10 +125,10 @@
 
                             <div class="col-md-2">
 
-                                <div class="btn-group" style="margin-top: 30px;">
+                                <div class="btn-group" style="margin-top: 26px; margin-left:116px">
                                     <button type="button" id="btnSearchPayable" class="btn btn-success active">Search</button>
                                     @*<button type="reset" id="btnResetPayable" class="btn btn-danger active">Reset</button>*@
-                                    <button type="button" id="btnPay" class="btn btn-primary active">Pay</button>
+                                    <button type="button" id="btnPay" class="btn btn-danger active">Pay</button>
                                 </div>
                             </div>
 
