--- a/MyLeoRetailer/Views/PostLogin/Master/Brand/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Brand/Index.cshtml
@@ -48,7 +48,7 @@
 
                     <div class="form-group" style="width:500px;">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Brand Code.</span>
-                        <input type="text" class="form-control" placeholder="Enter brand code." name="Brand.Brand_Code" />
+                        <input type="text" class="form-control" placeholder="Enter brand code." name="Brand.Brand_Code" maxlength="5" />
                     </div>
 
                     <div class="form-group" style="margin-bottom: 5px; width:1110px; float: right;">
