fixed employee active

--- a/MyLeoRetailer/Views/PostLogin/Master/Product/_ProductPrizing.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Product/_ProductPrizing.cshtml
@@ -39,7 +39,7 @@
                     <div class="row">
                         <div class="form-group auto-complete">
                             <div class="input-group">
-                                <input type="text" class="form-control color-filter autocomplete-text" name="Filter.Color" id="txtColourName" placeholder="Enter color" data-table="Colour" data-col="Colour_ID,Colour_Name" data-headernames="Colour">
+                                <input type="text" class="form-control color-filter autocomplete-text" readonly="readonly" name="Filter.Color" id="txtColourName" placeholder="Enter color" data-table="Colour" data-col="Colour_ID,Colour_Name" data-headernames="Colour">
                                 <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
                                 <input type="hidden" id="hdnColourId" value="" name="Filter.Color" class="auto-complete-value" />
                                 <input type="hidden" id="hdnColourName" value="" name="Filter.Color" class="auto-complete-label" />
